Neuro-Test: Fixed modal closing bug,oversized character bug and added some documentation
-Routes and trialLogic have been documented to facilitate understanding
- Fixed the bug where the modal would close on click elsewhere and the
trial wouldn't start
-Tweaked the size of the characters displayed in the trial, if there
were less than 3 characters, the characters would appear off screen

Notice: There is a slight delay on db interaction and problem with the
schema when saving or submitting, will investigate further

--- a/public/stylesheets/trial.css
+++ b/public/stylesheets/trial.css
@@ -49,6 +49,10 @@ canvas{
     height: 100vh;
 }
 
+.character-container{
+    max-height: 70%;
+}
+
 #colorAssociation{
     margin: auto 0;
     display: none;
